@@ -27,6 +27,7 @@ Bug fixes
  * Use specific page model for the parent page in the explore index (Gagaro)
  * Remove responsive styles in embed when there is no ratio available (Gagaro)
  * Parent page link in page search modal no longer disappears on hover (Dan Braghis)
+ * ModelAdmin views now consistently call ``get_context_data`` (Andy Babic)
 
 
 Upgrade considerations
